app/objects/Certification__c.object
<CustomObject>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Date Achieved</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>total_element__c</fullName>
        <label>total element</label>
        <summaryForeignKey>Element__c.certification__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>